yugabyte/yugabyte-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yugabyte-ingress
  namespace: yugabyte
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - test-yugabyte.lra-poc.com
      secretName: yugabyte-tls
  rules:
    - host: test-yugabyte.lra-poc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yb-master-ui
                port:
                  number: 7000
